--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "devDependencies": {
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/node": "^24.10.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
-    "@types/node": "^24.10.1"
   }
 }
